# previews

./: Dockerfile  NOTES.txt  app.py  docker-compose.yml  previews_make_data.py  pyproject.toml  test.py  test_model_on_previews.py  test_package.py
calc_clouds/: cloudy_class.py  funcs.py  test_model_on_previews.py
ear_of_labeled_data/cloudsen12_train/: class_ratios.py  cloud_detection.py  test.py  tools.py  train.py
ear_of_labeled_data/train_on_labeled_data/: NOTES.txt  cloud_detection.py  cut_patches.py  imutils.py  previews_images_test_download.py  test_whole_preview.py  train.py
make_data/: make_previews_data.py
